@@ -1,11 +1,11 @@
 {
   "name": "__MSG_extensionName__",
-  "short_name": "calc",
+  "short_name": "calc-extension",
   "description": "__MSG_extensionDescription__",
   "author": "Martin Väth",
   "version": "0.2",
   "manifest_version": 2,
-  "homepage_url": "https://addons.mozilla.org/en-US/firefox/addon/calc-extension/"
+  "homepage_url": "https://addons.mozilla.org/en-US/firefox/addon/calc-extension/",
   "default_locale": "en",
 
   "background": {
